src/test/resources/wacc48/shell/shellSemanticErr/multiple/ifAndWhileErrs.wacc
# boolean typo and if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

  while tru do
    if 15 + 6 then 
      skip 
    else 
      skip
    fi
  done